Fixes PR
* Removed p, q0, q1, q2 config for å ikke deploye til de miljøene. Denne branchen er avhengig av db endringer som bare finnes i q4 og q5