@@ -17,8 +17,8 @@ import org.springframework.web.reactive.function.client.WebClientResponseExcepti
 import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
+import static no.nav.dokarkiv.core.cache.CacheConfig.HISTORISKE_AKTOERIDER;
 import static no.nav.dokarkiv.core.cache.CacheConfig.HISTORISKE_IDENTER;
 import static no.nav.dokarkiv.core.storage.RetryConstants.DELAY_SHORT;
 import static no.nav.dokarkiv.core.storage.RetryConstants.MULTIPLIER_SHORT;
@@ -59,7 +59,7 @@ public class PdlIdentConsumer implements IdentConsumer {
 	@Override
 	public String hentAktoerId(String folkeregisterIdent) throws PersonIkkeFunnetException {
 
-		String ident = this.validateFolkeregisterIdent(folkeregisterIdent);
+		String ident = validateFolkeregisterIdent(folkeregisterIdent);
 		PdlResponse pdlResponse = webClient.post()
 				.bodyValue(mapHentAktoerIdForFolkeregisterident(ident))
 				.retrieve()
@@ -93,7 +93,7 @@ public class PdlIdentConsumer implements IdentConsumer {
 	@Override
 	public String hentFolkeregisterIdent(String aktoerId) throws PersonIkkeFunnetException {
 
-		String ident = this.validateFolkeregisterIdent(aktoerId);
+		String ident = validateFolkeregisterIdent(aktoerId);
 		final PdlResponse pdlResponse = webClient.post()
 				.bodyValue(mapHentFolkeregisterIdentForAktoerId(ident))
 				.retrieve()
@@ -127,7 +127,7 @@ public class PdlIdentConsumer implements IdentConsumer {
 	@Cacheable(HISTORISKE_IDENTER)
 	@Override
 	public List<String> hentHistoriskeFolkeregisterIdenter(String folkeregisterIdent) throws PersonIkkeFunnetException {
-		String ident = this.validateFolkeregisterIdent(folkeregisterIdent);
+		String ident = validateFolkeregisterIdent(folkeregisterIdent);
 
 		PdlResponse pdlResponse = webClient.post()
 				.bodyValue(mapHentHistoriskeFolkeregisterIdentForAktoerId(ident))
@@ -137,7 +137,8 @@ public class PdlIdentConsumer implements IdentConsumer {
 				.block();
 
 		if (pdlResponse.getErrors() == null || pdlResponse.getErrors().isEmpty()) {
-			return pdlResponse.getData().getHentIdenter().getIdenter().stream().map(PdlResponse.PdlIdent::getIdent).collect(Collectors.toList());
+			return pdlResponse.getData().getHentIdenter().getIdenter()
+					.stream().map(PdlResponse.PdlIdent::getIdent).toList();
 		} else {
 			if (PERSON_IKKE_FUNNET_CODE.equals(pdlResponse.getErrors().get(0).getExtensions().getCode())) {
 				throw new PersonIkkeFunnetException("Fant ikke historiske identer for person i pdl.");
@@ -150,10 +151,10 @@ public class PdlIdentConsumer implements IdentConsumer {
 			include = HttpServerErrorException.class,
 			backoff = @Backoff(delay = DELAY_SHORT, multiplier = MULTIPLIER_SHORT)
 	)
-	@Cacheable(HISTORISKE_IDENTER)
+	@Cacheable(HISTORISKE_AKTOERIDER)
 	@Override
 	public List<String> hentHistoriskeAktoerIds(String folkeregisterIdent) throws PersonIkkeFunnetException {
-		String ident = this.validateFolkeregisterIdent(folkeregisterIdent);
+		String ident = validateFolkeregisterIdent(folkeregisterIdent);
 
 		PdlResponse pdlResponse = webClient.post()
 				.bodyValue(mapHentHistoriskeAktoerIdsForAktoerId(ident))
@@ -163,10 +164,11 @@ public class PdlIdentConsumer implements IdentConsumer {
 				.block();
 
 		if (pdlResponse.getErrors() == null || pdlResponse.getErrors().isEmpty()) {
-			return pdlResponse.getData().getHentIdenter().getIdenter().stream().map(PdlResponse.PdlIdent::getIdent).collect(Collectors.toList());
+			return pdlResponse.getData().getHentIdenter().getIdenter()
+					.stream().map(PdlResponse.PdlIdent::getIdent).toList();
 		} else {
 			if (PERSON_IKKE_FUNNET_CODE.equals(pdlResponse.getErrors().get(0).getExtensions().getCode())) {
-				throw new PersonIkkeFunnetException("Fant ikke historiske identer for person i pdl.");
+				throw new PersonIkkeFunnetException("Fant ikke historiske aktørIder for person i pdl.");
 			}
 			throw new PdlFunctionalException("Kunne ikke hente historiske identer for ident." + pdlResponse.getErrors());
 		}
@@ -181,7 +183,7 @@ public class PdlIdentConsumer implements IdentConsumer {
 
 		ResponseEntity<PdlPersonResponse> pdlPersonResponse = webClient.post()
 				.header(HEADER_PDL_TEMA, tema)
-				.bodyValue(mapHentPersonIdentForId(this.validateFolkeregisterIdent(ident)))
+				.bodyValue(mapHentPersonIdentForId(validateFolkeregisterIdent(ident)))
 				.retrieve()
 				.toEntity(PdlPersonResponse.class)
 				.doOnError(this::handleError).block();
@@ -219,17 +221,24 @@ public class PdlIdentConsumer implements IdentConsumer {
 		final HashMap<String, Object> variables = new HashMap<>();
 		variables.put("ident", ident);
 		return PdlRequest.builder()
-				.query("query hentIdenter($ident: ID!) {hentIdenter(ident: $ident, grupper: FOLKEREGISTERIDENT, historikk: true) {identer { ident gruppe historisk } } }")
+				.query("""
+						query hentIdenter($ident: ID!) {
+						 hentIdenter(ident: $ident, grupper: FOLKEREGISTERIDENT, historikk: true) {
+						 identer { ident gruppe historisk } } }
+						 """)
 				.variables(variables)
 				.build();
 	}
-
 
 	private PdlRequest mapHentHistoriskeAktoerIdsForAktoerId(final String aktoerId) {
 		final HashMap<String, Object> variables = new HashMap<>();
 		variables.put("ident", aktoerId);
 		return PdlRequest.builder()
-				.query("query hentIdenter($ident: ID!) {hentIdenter(ident: $ident, grupper: AKTORID, historikk: true) {identer { ident gruppe historisk } } }")
+				.query("""
+						query hentIdenter($ident: ID!) {
+						hentIdenter(ident: $ident, grupper: AKTORID, historikk: true) {
+						identer { ident gruppe historisk } } }
+						""")
 				.variables(variables)
 				.build();
 	}
